--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,22 +4,22 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: Inicio
     url: '#about'
     weight: 10
-  - name: Posts
+  - name: Novedades
     url: '#posts'
     weight: 20
-  - name: Projects
+  - name: Investigaciones
     url: '#projects'
     weight: 30
-  - name: Talks
-    url: '#talks'
+  - name: Equipo
+    url: '#people'
     weight: 40
-  - name: Publications
-    url: '#featured'
+  - name: Publicaciones
+    url: '#publications'
     weight: 50
-  - name: Contact
+  - name: Contacto
     url: '#contact'
     weight: 60
 
