--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,7 +17,7 @@ main:
     url: '#people'
     weight: 40
   - name: Publicaciones
-    url: '#publications'
+    url: '#publicaciones'
     weight: 50
   - name: Contacto
     url: '#contact'
