--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@ theme: "starter-hugo-academic"
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: CEI # Website name
-baseURL: 'https://merry-paprenjak-91a8be.netlify.app/' # Website URL
+baseURL: 'https://aesthetic-gecko-c65929.netlify.app' # Website URL
 
 ############################
 ## LANGUAGE
